Inherit from the sonatype oss parent artifact
And stop passing `--illegal-access=` to tests since it's going
away in 17.

PiperOrigin-RevId: 379616951